# rag-from-scratch

./: .gitignore  LICENSE  pyproject.toml
benchmarks/research/: README.md  metadata.json  queries.json
chunkers/: fixedsize.py
examples/: hello_world.py  research.py  results.csv
loaders/: base.py  docx.py  factory.py  pdf.py
rag.egg-info/: PKG-INFO  SOURCES.txt
rag/chunkers/: base.py  fixedsize.py  identity.py
rag/embedders/: base.py  sentencetransformer.py
rag/evaluation/: analysis.py  metrics.py  retrieval.py
rag/generators/: base.py  openai.py  prompts.py
rag/loaders/: base.py  docx.py  factory.py  html.py  pdf.py
rag/pipeline/: pipeline.py
rag/rerankers/: base.py  cross_encoder.py
rag/retrievers/: base.py  faiss.py
tests/: test_retrieval_metrics.py
