[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rag"
version = "0.0.0"
description = "RAG modules"
authors = [
    { name = "Joao Nunes" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["rag*"]




